--- a/indexStyle.css
+++ b/indexStyle.css
@@ -112,6 +112,13 @@ body {
   width: 100%;
   background-attachment: fixed;
   filter: none;
+  image-rendering: auto;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
   -webkit-filter: blur(0px);
   -moz-filter: blur(0px);
   -ms-filter: blur(0px);
