--- a/joinUs.css
+++ b/joinUs.css
@@ -20,10 +20,9 @@ body {
   background-color: rgba(0, 0, 0, 0.65);
   background-blend-mode: darken;
   filter: none;
-  -o-background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  background-size: cover;
+  image-rendering: auto;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
   -o-background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
